# oai_lm_pc

./: .gitignore  CAN-USB_init.cfg  LICENSE  README.md  can_unit.py  cyclogram_result_win.py  data_vis.py  data_vis_unit.py  data_vis_widget.py  flash_loader.py  lm_data.py  main.py  main_win.py  main_win.ui  norby_data.py  pyproject.toml  short_tests.py  usb_can_bridge.py
CAN-USB_Config/: LM CMD and CMD REG.cfg  LM PL SOL.cfg  Norby2_autonomus.cfg
lm_debug_client/: init_cfg.json
lm_debug_client/CAN-USB_Config/: Norby2_var_id_5_TMI.cfg
pl_sol_frame/: 20230721_101900_pl_sol_results.csv  20230721_101900_pl_sol_results.txt  20230725-132517_pl_sol_data.csv  20230725-132517_pl_sol_data.txt  20230810-121544_pl_sol_data.csv  20230810-121544_pl_sol_data.txt  2023_06_02 12-12-57 PL_SOL_Mem .csv  2023_06_02 12-12-57 PL_SOL_Mem .txt  2023_06_02 12-29-11 PL_SOL_Mem .csv  2023_06_02 12-29-11 PL_SOL_Mem .txt  2023_06_02 13-10-57 PL_SOL_Mem .txt  2023_06_02 13-26-13 PL_SOL_Mem .csv  2023_06_02 13-26-13 PL_SOL_Mem .txt  2023_06_02 13-40-27 PL_SOL_Mem .txt  sol_decode.py
